--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: A virtual proof that I'm awesome
 #url: "https://example.com"
 
 # baseurl should be an empty string
-#baseurl: ""
+#baseurl: "DavidnHang.github.io"
 
 # --- Navigation bar options --- #
 
@@ -38,7 +38,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
+navbar-col: "##1c9166"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
@@ -60,7 +60,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: David Hang
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
