--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://deanattali.com"
+  Author's home: "https://davidnhang.github.io/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -69,21 +69,19 @@ author:
 social-network-links:
   rss: true
   email: "Davidnhang@gmail.com"
-  facebook: 
-  github: 
-  twitter: 
+  github:
 #  reddit: yourname
 #  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
+#  xing: david
+#  stackoverflow:
+#  snapchat:
+#  instagram:
+#  youtube:
+#  spotify:
+#  telephone:
+#  steam:
+#  twitch:
+#  yelp:
 
 # Select which share links to show in posts
 share-links-active:
@@ -93,7 +91,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "MyWebsite.com"  # eg. "https://davidnhang.github.io/"
 
 # --- Web Statistics Section --- #
 
